perf: Optimize `contains` for scalar search arg (#19529)
## Which issue does this PR close?

<!--
We generally require a GitHub issue to be filed for all bug fixes and
enhancements and this helps us generate change logs for our releases.
You can link an issue to this PR using the GitHub syntax. For example
`Closes #123` indicates that this PR will close issue #123.
-->

- Closes #.

## Rationale for this change

<!--
Why are you proposing this change? If this is already explained clearly
in the issue then this section is not needed.
Explaining clearly why changes are proposed helps reviewers understand
your changes and offer better suggestions for fixes.
-->

This PR is an alternative to
https://github.com/apache/datafusion/pull/19514 that replaces the use of
`make_scalar_function` with a new `make_scalar_function_columnar` that
avoids expanding scalar values to arrays for each batch.

| Benchmark | Old Code | New Code | Improvement |

|--------------------------------------------|----------|----------|-------------|
| contains_StringViewArray_scalar_strlen_8 | ~97 µs | ~34 µs | 2.8x
faster |
| contains_StringViewArray_scalar_strlen_32 | ~175 µs | ~37 µs | 4.7x
faster |
| contains_StringViewArray_scalar_strlen_128 | ~332 µs | ~42 µs | 7.9x
faster |
| contains_StringViewArray_scalar_strlen_512 | ~371 µs | ~88 µs | 4.2x
faster |

## What changes are included in this PR?

<!--
There is no need to duplicate the description in the issue here but it
is sometimes worth providing a summary of the individual changes in this
PR.
-->

## Are these changes tested?

<!--
We typically require tests for all PRs in order to:
1. Prevent the code from being accidentally broken by subsequent changes
2. Serve as another way to document the expected behavior of the code

If tests are not included in your PR, please explain why (for example,
are they covered by existing tests)?
-->

Existing tests

## Are there any user-facing changes?

<!--
If there are user-facing changes then we may r

--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -262,6 +262,11 @@ required-features = ["unicode_expressions"]
 
 [[bench]]
 harness = false
+name = "contains"
+required-features = ["string_expressions"]
+
+[[bench]]
+harness = false
 name = "starts_with"
 required-features = ["string_expressions"]
 
