--- a/datafusion/datasource-parquet/Cargo.toml
+++ b/datafusion/datasource-parquet/Cargo.toml
@@ -57,7 +57,7 @@ tokio = { workspace = true }
 [dev-dependencies]
 chrono = { workspace = true }
 criterion = { workspace = true }
-datafusion = { workspace = true }
+datafusion = { workspace = true, default-features = true }
 datafusion-functions-nested = { workspace = true }
 tempfile = { workspace = true }
 
