perf: optimize factorial function performance (#19575)
## Which issue does this PR close?

<!--
We generally require a GitHub issue to be filed for all bug fixes and
enhancements and this helps us generate change logs for our releases.
You can link an issue to this PR using the GitHub syntax. For example
`Closes #123` indicates that this PR will close issue #123.
-->

- Closes #.

## Rationale for this change
benchmark
```
factorial_array         time:   [778.63 ns 783.03 ns 787.52 ns]
                        change: [−90.314% −90.211% −90.055%] (p = 0.00 < 0.05)
                        Performance has improved.

factorial_scalar        time:   [317.32 ns 319.36 ns 321.41 ns]
                        change: [−28.219% −27.508% −26.683%] (p = 0.00 < 0.05)
                        Performance has improved.
```
<!--
Why are you proposing this change? If this is already explained clearly
in the issue then this section is not needed.
Explaining clearly why changes are proposed helps reviewers understand
your changes and offer better suggestions for fixes.
-->

## What changes are included in this PR?
1. factorial implementation from using loop to looking up precomputed
values.
2. using the `try_unary` kernel function on `PrimitiveArray`. (However,
since this isn’t `unary` function, it does not get vectorized execution)

and add benchmark
<!--
There is no need to duplicate the description in the issue here but it
is sometimes worth providing a summary of the individual changes in this
PR.
-->

## Are these changes tested?
Yes.
<!--
We typically require tests for all PRs in order to:
1. Prevent the code from being accidentally broken by subsequent changes
2. Serve as another way to document the expected behavior of the code

If tests are not included in your PR, please explain why (for example,
are they covered by existing tests)?
-->

## Are there any user-facing changes?
No.
<!--
If there are user-facing changes then we may require documentation to be
updated before approv

--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -299,3 +299,8 @@ required-features = ["unicode_expressions"]
 harness = false
 name = "left"
 required-features = ["unicode_expressions"]
+
+[[bench]]
+harness = false
+name = "factorial"
+required-features = ["math_expressions"]
