--- a/datafusion/spark/Cargo.toml
+++ b/datafusion/spark/Cargo.toml
@@ -53,6 +53,7 @@ log = { workspace = true }
 percent-encoding = "2.3.2"
 rand = { workspace = true }
 sha1 = "0.10"
+twox-hash = "2.1"
 url = { workspace = true }
 
 [dev-dependencies]
