--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,6 +163,7 @@ insta = { version = "1.45.0", features = ["glob", "filters"] }
 itertools = "0.14"
 liblzma = { version = "0.4.4", features = ["static"] }
 log = "^0.4"
+num = "0.4"
 num-traits = { version = "0.2" }
 object_store = { version = "0.12.4", default-features = false }
 parking_lot = "0.12"
