doc: update udwf docs & add LimitEffect doc

--- a/datafusion/expr/Cargo.toml
+++ b/datafusion/expr/Cargo.toml
@@ -64,5 +64,6 @@ sqlparser = { workspace = true, optional = true }
 
 [dev-dependencies]
 ctor = { workspace = true }
+datafusion-macros = { workspace = true }
 env_logger = { workspace = true }
 insta = { workspace = true }
