--- a/datafusion/expr/Cargo.toml
+++ b/datafusion/expr/Cargo.toml
@@ -67,3 +67,7 @@ ctor = { workspace = true }
 datafusion-macros = { workspace = true }
 env_logger = { workspace = true }
 insta = { workspace = true }
+
+[package.metadata.cargo-machete]
+# See: https://github.com/bnjbvr/cargo-machete/issues/163
+ignored = ["datafusion-macros"]
