apply projection feature in arrow-avro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,26 +90,26 @@ version = "51.0.0"
 ahash = { version = "0.8", default-features = false, features = [
     "runtime-rng",
 ] }
-arrow = { git = "https://github.com/jecsand838/arrow-rs", branch = "avro-reader-projection", features = [
+arrow = { git = "https://github.com/apache/arrow-rs", rev = "1db1a8869cceb179aa885ed58da9f0b49c03eafe", features = [ # fixme
     "prettyprint",
     "chrono-tz",
-] } # fixme
-arrow-avro = { git = "https://github.com/jecsand838/arrow-rs", branch = "avro-reader-projection", default-features = false, features = [
+] }
+arrow-avro = { git = "https://github.com/apache/arrow-rs", rev = "1db1a8869cceb179aa885ed58da9f0b49c03eafe", default-features = false, features = [ # fixme
     "deflate",
     "snappy",
     "zstd",
     "bzip2",
     "xz",
-] }# fixme
-arrow-buffer = { git = "https://github.com/jecsand838/arrow-rs", branch = "avro-reader-projection", default-features = false }# fixme
-arrow-flight = { git = "https://github.com/jecsand838/arrow-rs", branch = "avro-reader-projection", features = [# fixme
+] }
+arrow-buffer = { git = "https://github.com/apache/arrow-rs", rev = "1db1a8869cceb179aa885ed58da9f0b49c03eafe", default-features = false } # fixme
+arrow-flight = { git = "https://github.com/apache/arrow-rs", rev = "1db1a8869cceb179aa885ed58da9f0b49c03eafe", features = [ # fixme
     "flight-sql-experimental",
 ] }
-arrow-ipc = { git = "https://github.com/jecsand838/arrow-rs", branch = "avro-reader-projection", default-features = false, features = [# fixme
+arrow-ipc = { git = "https://github.com/apache/arrow-rs", rev = "1db1a8869cceb179aa885ed58da9f0b49c03eafe", default-features = false, features = [ # fixme
     "lz4",
 ] }
-arrow-ord = { git = "https://github.com/jecsand838/arrow-rs", branch = "avro-reader-projection", default-features = false }# fixme
-arrow-schema = { git = "https://github.com/jecsand838/arrow-rs", branch = "avro-reader-projection", default-features = false }# fixme
+arrow-ord = { git = "https://github.com/apache/arrow-rs", rev = "1db1a8869cceb179aa885ed58da9f0b49c03eafe", default-features = false } # fixme
+arrow-schema = { git = "https://github.com/apache/arrow-rs", rev = "1db1a8869cceb179aa885ed58da9f0b49c03eafe", default-features = false } # fixme
 async-trait = "0.1.89"
 bigdecimal = "0.4.8"
 bytes = "1.11"
@@ -172,7 +172,7 @@ log = "^0.4"
 num-traits = { version = "0.2" }
 object_store = { version = "0.12.4", default-features = false }
 parking_lot = "0.12"
-parquet = { git = "https://github.com/jecsand838/arrow-rs", branch = "avro-reader-projection", default-features = false, features = [ # fixme
+parquet = { git = "https://github.com/apache/arrow-rs", rev = "1db1a8869cceb179aa885ed58da9f0b49c03eafe", default-features = false, features = [ # fixme
     "arrow",
     "async",
     "object_store",
