test(wasmtest): enable compression feature for wasm build (refs 5765a08c8)
`Switch from xz2 to liblzma to reduce duplicate dependencies (#17509)` made it possible to compile to wasm (liblzma supports wasm), so enable the compression feature in wasmtest.

Refs: #17509

--- a/datafusion/wasmtest/Cargo.toml
+++ b/datafusion/wasmtest/Cargo.toml
@@ -47,7 +47,7 @@ chrono = { version = "0.4", features = ["wasmbind"] }
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.1", optional = true }
-datafusion = { workspace = true, features = ["parquet", "sql"] }
+datafusion = { workspace = true, features = ["compression", "parquet", "sql"] }
 datafusion-common = { workspace = true }
 datafusion-execution = { workspace = true }
 datafusion-expr = { workspace = true }
