fix: optimize Docker build caching to prevent re-downloading Rust dependencies
- Add docker-compose.yml with persistent volume mounts for Rust cache
- Update Dockerfile with cache mount directives for cargo registry and git
- Update README with docker-compose as recommended approach for iterative builds
- Fixes performance issue where docker run re-downloads components each time

This addresses the feedback from the reviewer where subsequent builds were slow
due to missing Rust dependency cache. Using docker-compose now preserves the
cargo cache between runs.

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -25,7 +25,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     dos2unix \
     && rm -rf /var/lib/apt/lists/*
 
-RUN cargo install cargo-depgraph --version ^1.6 --locked
+# Install Rust tools with persistent caching
+# These are cached in docker volumes when using docker-compose
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    --mount=type=cache,target=/usr/local/cargo/git \
+    cargo install cargo-depgraph --version ^1.6 --locked
 
 WORKDIR /datafusion/docs
 
