fix: correct Docker build context and paths for docker-compose compatibility
- Change Dockerfile to build from repository root instead of docs/
- Fix COPY path for requirements.txt from docs directory
- Update working directory and CMD to properly handle paths
- Ensure docker-compose works correctly with cache volumes
- Docker build test passed successfully

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - .:/datafusion
       - rust-cache:/usr/local/cargo
-      - rust-target:/datafusion/docs/target
+      - rust-target:/datafusion/target
     working_dir: /datafusion
 
 volumes:
