Add benchmarks for different execution plans and Arrow IPC serde

--- a/datafusion/physical-plan/Cargo.toml
+++ b/datafusion/physical-plan/Cargo.toml
@@ -102,3 +102,11 @@ name = "sort_preserving_merge"
 harness = false
 name = "aggregate_vectorized"
 required-features = ["test_utils"]
+
+[[bench]]
+harness = false
+name = "filter_bench"
+
+[[bench]]
+harness = false
+name = "sort_bench"
