feat: Allow struct field access projections to be pushed down into scans

--- a/datafusion/physical-optimizer/Cargo.toml
+++ b/datafusion/physical-optimizer/Cargo.toml
@@ -50,6 +50,7 @@ datafusion-physical-expr = { workspace = true }
 datafusion-physical-expr-common = { workspace = true }
 datafusion-physical-plan = { workspace = true }
 datafusion-pruning = { workspace = true }
+indexmap = { workspace = true }
 itertools = { workspace = true }
 recursive = { workspace = true, optional = true }
 
