--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -59,15 +59,8 @@ jobs:
   linux-build-lib:
     name: linux build test
     needs: check-files
-    # if: needs.check-files.outputs.should_skip != 'true'
-    runs-on:
-      - runs-on=${{ github.run_id }}
-      - family=m7a
-      - cpu=16
-      - image=ubuntu24-full-x64
-      - extras=s3-cache
-      - disk=large
-      - tag=datafusion
+    if: needs.check-files.outputs.should_skip != 'true'
+    runs-on: ${{ github.repository_owner == 'apache' && format('runs-on={0},family=m7a,cpu=16,image=ubuntu24-full-x64,extras=s3-cache,disk=large,tag=datafusion', github.run_id) || 'ubuntu-latest' }}
     container:
       image: amd64/rust
     steps:
